# csoundengine

./: .cirrus.yml  .gitignore  README.rst  pyproject.toml  pyrightconfig.json  readthedocs.yml  setup.py
.github/workflows/: test.yml  test2.yml
cmake/: csound-custom-macos.cmake
csoundengine/: __init__.py  __sessionbase.py  _common.py  _palette.py  abstractrenderer.py  baseevent.py  baseschedevent.py  busproxy.py  config.py  csd.py  csounddefs.py  csoundlib.py  csoundparse.py  dependencies.py  engine.py  enginebase.py  engineorc.py  errors.py  event.py  instr.py  instrtools.py  interact.py  internal.py  internalTools.py  jacktools.py  jupytertools.py  linuxaudio.py  magic.py  offline.py  offlineengine.py  offlinengine.py  offlineorc.py  paramtable.py  plotting.py  renderjob.py  schedevent.py  session.py  sessionbase.py  sessionevent.py  sessionhandler.py  (+8 more)
csoundengine/data/plugins6/macos/: libelse.dylib  libklib.dylib  librisset.dylib
csoundengine/data/plugins6/macos-arm64/: libbeosc.dylib  libelse.dylib  libklib.dylib  libpathtools.dylib  libpoly.dylib  librisset.dylib
csoundengine/data/plugins6/macos-x86_64/: libbeosc.dylib  libelse.dylib  libpoly.dylib  libsndmeta.dylib
csoundengine/data/plugins7/macos/: libbeosc.dylib  libjsfx.dylib  libpathtools.dylib  libpoly.dylib  libsndmeta.dylib
csoundengine/data/plugins7/macos-x86_64/: libklib.dylib  libpathtools.dylib  libsndmeta.dylib
data/plugins/macos/: libbeosc.dylib  libelse.dylib  libjsfx.dylib  libklib.dylib  libpathtools.dylib  libpoly.dylib  librisset.dylib  libsndmeta.dylib
docs/: Builtin-Opcodes.rst  Installation.rst  Introduction.rst  Makefile  Reference.rst  Tutorial.rst  baseevent.rst  conf.py  config.rst  configkeys.rst  csoundengine.rst  csoundlib.rst  index.rst  instr.rst  jupyternotebook.rst  magics.rst  offline.rst  offlineengine.rst  offlineengine_example.inc  offlineengine_example2.inc  offlinerenderer.rst  renderjob.rst  requirements.txt  schedevent.rst  session.rst  synth.rst  tables.rst
docs/_build/doctrees/: Installation.doctree  Introduction.doctree  Reference.doctree  Tutorial.doctree  environment.pickle  index.doctree
docs/_build/doctrees/api/: csoundengine.Engine.doctree  csoundengine.Instr.doctree  csoundengine.Renderer.doctree  (+12 more)
docs/_build/html/: .buildinfo  Installation.html  Introduction.html  Reference.html  Tutorial.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_static/: custom.css
docs/api/: csoundengine.Engine.rst  csoundengine.Instr.rst  csoundengine.Renderer.rst  csoundengine.engine.Engine.rst  csoundengine.engine.activeEngines.rst  csoundengine.engine.getEngine.rst  csoundengine.offline.Renderer.rst  csoundengine.offline.ScoreEvent.rst  csoundengine.renderer.Renderer.rst  csoundengine.session.Session.rst
notebooks/: Untitled.ipynb  buses.ipynb  offlineengine-playback.ipynb  offlineengine.ipynb  pitchtrack-debug.ipynb  pitchtrack.ipynb  test-automation.ipynb  test-paramtable.ipynb  voice-pitch-track.ipynb
notebooks/snd/: piano-pitchtest-2.flac
notebooks/test/: plltrack.ipynb  test-automation.ipynb  test-bus.ipynb  test-dealloc-synth.ipynb  test-delay.ipynb  test-engine-params.ipynb  test-libcsound.ipynb  test-named-events.ipynb  test-new-named-params.ipynb  test-offline-render.ipynb  test-offline.ipynb  test-offlinesession.ipynb  test-params.ipynb  test-paramtable.ipynb  test-playsample.ipynb  test-stop.ipynb  test-tight-scheduling.ipynb  test-whenfinished.ipynb
scripts/: download-plugins.py  update-config-docs.py
test/: importtime.py  libcsoundtest.py  simple.py  test1.csd  test1.py  test2.py  testargs.py
(+27 files in other folders)
