[build-system]
requires = ["setuptools", "setuptools-scm"]

build-backend = "setuptools.build_meta"

[project]
name = "csoundengine"
version = "2.19.8"
license = { file = "LICENSE.txt" }
description = "An audio synthesis framework using csound"
authors = [
    { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" },
]

readme = "README.rst"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "cachetools",
    "JACK-client",
    "appdirs",
    "pygments",
    # "sf2utils",
	"sf2utils13",
    "ipywidgets",
    "xxhash",
    "docstring_parser",
    "typing_extensions",

    "libcsound>=0.11.1",
    "sndfileio>=2.1.1",
    "emlib>=1.19",
    "configdict>=2.10.0",
    # "numpyx>=1.3.3",
    "pitchtools>=1.14.0",
    "risset>=3.2.2",
    "sounddevice",
]

[tool.setuptools]
packages = ["csoundengine"]


[tool.setuptools.package-data]
csoundengine = ['csoundengine/data']


[project.urls]
"Homepage" = "https://github.com/gesellkammer/csoundengine"


[tool.ruff.lint]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501", "I001", "E402"]
